# ThreatScan

./: .editorconfig  .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml  render.yaml  test_sample.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  docker-publish.yml
.venv311/: pyvenv.cfg
.venv311/Scripts/: activate  activate.bat  jp.py
backend/: Dockerfile  Dockerfile.beat  Dockerfile.worker  alembic.ini  pytest.ini  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py
backend/app/: __init__.py  config.py  database.py  logging.py  main.py
backend/app/models/: __init__.py  comment.py  extracted_string.py  file.py  file_indicator.py  indicator.py  report.py  scan_job.py  tag.py  user.py  yara_match.py
backend/app/routes/: admin.py  indicators.py  jobs.py  report.py  search.py  upload.py
backend/app/schemas/: api.py
backend/app/services/: storage.py  validation.py
backend/app/worker/: analysis.py  tasks.py  (+1 more)
backend/scripts/: healthcheck.py  seed_data.py  wait_for_services.py
backend/tests/: conftest.py  test_analysis.py  test_api.py  test_config.py  test_models.py  test_validation.py
database/: init.sql
docs/: API_REFERENCE.md  ARCHITECTURE.md  SECURITY.md  example_report.json
frontend/: .eslintrc.json  Dockerfile  next.config.js  package-lock.json  package.json  tailwind.config.ts
yara-rules/: malware_core.yar  suspicious_indicators.yar
(+18 files in other folders)
